crates/tui/tests/storybook/snapshots/app_prompt::prompt_queued_messages.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---




  » first follow-up
  › second follow-up
─ ✿ working… ─────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
