crates/tui/tests/storybook/snapshots/app_prompt::prompt_queued_messages_collapse_when_tall_queue_short_terminal.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 382
expression: frame.text()
---


  › follow-up 9
  › follow-up 10
  › follow-up 11
  › follow-up 12
  +8 more queued

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
