crates/tui/tests/storybook/snapshots/app_prompt::prompt_queued_messages_with_notification_collapse_on_short_terminal.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---


  info  this is a notification
  › follow-up 9
  › follow-up 10
  +8 more queued
─ ✿ working… ─────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
