crates/tui/tests/storybook/snapshots/app_prompt::prompt_queued_messages_with_stash_collapse_on_short_terminal.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 396
expression: frame.text()
---


  › follow-up 8
  › follow-up 9
  › follow-up 10
  +7 more queued
  ◌ Stashed (ctrl+s to unstash)

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
