crates/tui/tests/storybook/snapshots/app_prompt::prompt_request_queue_row_truncates.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---



  » request queue message tha…
─ ✿ working… ───────────────────

────────────────────────────────
 ○ normal               1:1 100%
