crates/tui/tests/storybook/snapshots/app_prompt::prompt_shell_escape_prefix.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---




──────────────────────────────────────────────────
 !ls -la
──────────────────────────────────────────────────
 ○ normal
