crates/tui/tests/storybook/snapshots/app_prompt::prompt_shell_escape_prefix.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 345
expression: frame.styles_text()
---
dim: 50 8
  5   1   1 fg=AnsiValue(197) attrs=bold
  5   8   1 fg=Black bg=White
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(233)
  7  10  40 bg=AnsiValue(233)
